--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-player": "^2.13.0",
     "react-toastify": "^9.1.2",
     "tailwindcss": "3.3.1",
     "zod": "^3.21.4"
